# solana_pastel_oracle_program

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  solana_pastel_oracle_code_single_file.txt  testContributor.ts
depends/patches/libgmp/: disable-asm-for-arm64.patch
programs/solana_pastel_oracle_program/: Cargo.toml
programs/solana_pastel_oracle_program/src/: big_number.rs  constant.rs  enumeration.rs  error.rs  fixed_exp.rs  fixed_giga.rs  helper.rs  lib.rs
programs/solana_pastel_oracle_program/src/instructions/: add_txid_for_monitoring.rs  handle_consensus.rs  handle_pending_payment.rs  initialize.rs  mod.rs  process_pastel_tx_status_report.rs  process_payment.rs  reallocate_oracle.rs  register_new_contributor.rs  request_reward.rs  set_bridge_contract.rs  submit_data_report.rs  withdraw_funds.rs
programs/solana_pastel_oracle_program/src/state/: consensus.rs  contributor.rs  mod.rs  oracle.rs  pastel_tx_status_report.rs  pending_payment.rs  temp_tx_status_report.rs  tx_id_submission_count.rs
scripts/: run_tests_with_logs.sh  test_script.rs  test_script.ts
tests/: solana_pastel_oracle_program.ts
